# FlexSEA-Comm

./: CMakeLists.txt
inc/: commStackConfig.h  flexsea.h  flexsea_buffers.h  flexsea_circular_buffer.h  flexsea_comm.h  flexsea_comm_def.h  flexsea_comm_multi.h  flexsea_interface.h  flexsea_multi_circbuff.h  flexsea_multi_frame_packet_def.h
src/: flexsea.c  flexsea_buffers.c  flexsea_circular_buffer.c  flexsea_comm.c  flexsea_comm_multi.c  flexsea_interface.c  flexsea_multi_circbuff.c  flexsea_payload.c
test/: test-flexsea_buffers.c  test-flexsea_comm.c
